--- a/CodeNameFive/View/Base.lproj/Main.storyboard
+++ b/CodeNameFive/View/Base.lproj/Main.storyboard
@@ -2237,24 +2237,24 @@
                                     <constraint firstAttribute="height" constant="712" id="X8J-6K-L3H"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PromotionCell" rowHeight="62" id="okd-MI-0Er" customClass="PromotionViewCell" customModule="CNF" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="55.333332061767578" width="414" height="62"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PromotionCell" id="okd-MI-0Er" customClass="PromotionViewCell" customModule="CNF" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="55.333332061767578" width="414" height="82"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="okd-MI-0Er" id="h9Q-k1-aSX">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="62"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="82"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="zud-ZU-JXc">
-                                                    <rect key="frame" x="30.000000000000004" y="16" width="39.333333333333343" height="30"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="zud-ZU-JXc">
+                                                    <rect key="frame" x="30.000000000000004" y="21" width="39.333333333333343" height="40"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uLs-ye-DJj">
-                                                            <rect key="frame" x="0.0" y="0.0" width="39.333333333333336" height="16"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="39.333333333333336" height="18.666666666666668"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W8F-aU-Ehx">
-                                                            <rect key="frame" x="0.0" y="18" width="39.333333333333336" height="12"/>
+                                                            <rect key="frame" x="0.0" y="25.666666666666661" width="39.333333333333336" height="14.333333333333332"/>
                                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                                             <color key="textColor" name="secondaryColor"/>
                                                             <nil key="highlightedColor"/>
@@ -2262,7 +2262,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TdZ-3a-quv">
-                                                    <rect key="frame" x="344.66666666666669" y="21.666666666666664" width="39.333333333333314" height="18.666666666666664"/>
+                                                    <rect key="frame" x="344.66666666666669" y="21.666666666666668" width="39.333333333333314" height="38.666666666666657"/>
                                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -2270,8 +2270,8 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="TdZ-3a-quv" firstAttribute="top" secondItem="h9Q-k1-aSX" secondAttribute="topMargin" constant="10.67" id="0Yq-Zm-UlO"/>
-                                                <constraint firstItem="zud-ZU-JXc" firstAttribute="top" secondItem="h9Q-k1-aSX" secondAttribute="topMargin" constant="5" id="41X-jl-ix9"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="zud-ZU-JXc" secondAttribute="bottom" constant="5" id="9tX-gr-aCL"/>
+                                                <constraint firstItem="zud-ZU-JXc" firstAttribute="top" secondItem="h9Q-k1-aSX" secondAttribute="topMargin" constant="10" id="41X-jl-ix9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="zud-ZU-JXc" secondAttribute="bottom" constant="10" id="9tX-gr-aCL"/>
                                                 <constraint firstItem="zud-ZU-JXc" firstAttribute="leading" secondItem="h9Q-k1-aSX" secondAttribute="leadingMargin" constant="10" id="A4K-ja-YQ3"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="TdZ-3a-quv" secondAttribute="trailing" constant="10" id="Y63-8e-6QE"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="TdZ-3a-quv" secondAttribute="bottom" constant="10.67" id="t09-oS-rdB"/>
@@ -2291,13 +2291,23 @@
                                     <outlet property="delegate" destination="HCl-Pa-EZF" id="tcV-Sf-sQs"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bV5-FV-uPj">
+                                <rect key="frame" x="0.0" y="183" width="414" height="1"/>
+                                <color key="backgroundColor" name="borderColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="tqM-oh-R4M"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" name="Background"/>
                         <constraints>
                             <constraint firstItem="3Gq-VH-dtT" firstAttribute="top" secondItem="CUQ-kN-q2X" secondAttribute="top" id="7Xw-wC-MEz"/>
                             <constraint firstItem="aJb-og-9pQ" firstAttribute="trailing" secondItem="CUQ-kN-q2X" secondAttribute="trailing" id="JnM-fe-ejP"/>
                             <constraint firstAttribute="bottom" secondItem="aJb-og-9pQ" secondAttribute="bottom" id="Ylh-ua-RnJ"/>
+                            <constraint firstItem="aJb-og-9pQ" firstAttribute="top" secondItem="bV5-FV-uPj" secondAttribute="bottom" id="bD9-Lb-xis"/>
                             <constraint firstItem="3Gq-VH-dtT" firstAttribute="trailing" secondItem="CUQ-kN-q2X" secondAttribute="trailing" id="c29-59-SeA"/>
+                            <constraint firstItem="bV5-FV-uPj" firstAttribute="leading" secondItem="CUQ-kN-q2X" secondAttribute="leading" id="chv-Au-F2F"/>
+                            <constraint firstItem="CUQ-kN-q2X" firstAttribute="trailing" secondItem="bV5-FV-uPj" secondAttribute="trailing" id="gf2-3T-9AV"/>
                             <constraint firstItem="aJb-og-9pQ" firstAttribute="trailing" secondItem="CUQ-kN-q2X" secondAttribute="trailing" id="iBr-cu-C1v"/>
                             <constraint firstItem="aJb-og-9pQ" firstAttribute="leading" secondItem="CUQ-kN-q2X" secondAttribute="leading" id="oHx-xp-nxU"/>
                             <constraint firstAttribute="bottom" secondItem="aJb-og-9pQ" secondAttribute="bottom" id="pKI-om-SqI"/>
@@ -6377,6 +6387,9 @@
         </namedColor>
         <namedColor name="UIViewCard">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="borderColor">
+            <color red="0.92900002002716064" green="0.92900002002716064" blue="0.92900002002716064" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="cellLineColor">
             <color white="0.9089999794960022" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
